# pgvecto.rs

./: .gitattributes  .typos.toml  Cargo.toml  Dockerfile  README.md  build.envd  build.rs  docker.sh  vectors.control
.github/workflows/: check.yml  nightly.yml  pgrx_binding.yml  python_check.yml  python_release.yml  release.yml  release_nightly.yml  release_on_publish.yml  release_release.yml  update_vendor.yml
assets/pg_config/: pg16_x86_64-unknown-linux-gnu.txt
crates/base/: Cargo.toml
crates/base/src/: global.rs  lib.rs  module.rs  parallelism.rs  search.rs
crates/base/src/computation/: mod.rs  svecf32.rs
crates/base/src/vector/: vecf16.rs
crates/elkan_k_means/: Cargo.toml
crates/elkan_k_means/src/: global.rs  lib.rs
crates/flat/: Cargo.toml
crates/flat/src/: lib.rs
crates/graph/: Cargo.toml
crates/hnsw/: Cargo.toml
crates/hnsw/src/: lib.rs
crates/index/: Cargo.toml
crates/index/src/: lib.rs
crates/index/src/optimizing/: indexing.rs  mod.rs
crates/index/src/segment/: sealed.rs
crates/indexing/src/: sealed.rs
crates/ivf/: Cargo.toml
crates/ivf/src/: lib.rs
crates/k_means/: Cargo.toml
crates/k_means/src/: lib.rs  lloyd.rs
crates/pyvectors/: Cargo.toml
crates/pyvectors/src/: indexing.rs
crates/quantization/: Cargo.toml
crates/quantization/src/: lib.rs  product.rs  quantizer.rs  rabitq.rs  scalar.rs  trivial.rs
crates/quantization/src/global/: mod.rs  product.rs  scalar.rs
crates/service/: Cargo.toml
crates/service/src/: prelude.rs
crates/service/src/algorithms/: flat.rs  hnsw.rs  mod.rs  raw.rs
crates/service/src/algorithms/ivf/: ivf_naive.rs  ivf_pq.rs
crates/service/src/index/: delete.rs  mod.rs
crates/service/src/index/indexing/: flat.rs
crates/service/src/index/optimizing/: indexing.rs
crates/service/src/index/segments/: growing.rs  sealed.rs
crates/service/src/instance/: mod.rs
crates/service/src/prelude/: error.rs
crates/service/src/storage/: dense.rs  sparse.rs
crates/service/src/utils/: clean.rs  element_heap.rs  mod.rs
crates/service/src/worker/: mod.rs
crates/utils/: Cargo.toml
crates/utils/src/: lib.rs
docs/: daemon.md  development.md  indexing.md
scripts/: build.sh  build_2.sh  build_deb.sh  build_ubuntu:focal.sh  ci_install.sh  ci_release.sh  ci_setup.sh  envd.sh  pgrx_binding.sh  update_vendor.sh
service/: Cargo.toml
service/src/: lib.rs
service/src/bgworker/: mod.rs
service/src/ipc/: mod.rs  transport.rs  transport_tcp.rs  transport_unix.rs
sql/upgrade/: vectors--0.1.11--0.2.0.sql  vectors--0.1.13--0.2.0.sql
src/: lib.rs  prelude.rs  udf.rs
src/algorithms/: flat.rs  hnsw.rs  ivf.rs  mod.rs  vectors.rs
src/algorithms/hnsw/: implementation.rs  mod.rs
src/algorithms/impls/: mod.rs
src/bgworker/: algo_hnsw.rs  export.rs  index.rs  mod.rs  normal.rs  rpc.rs  session.rs  wal.rs
src/bridge/: bindings.cpp  mod.rs
src/datatype/: memory_bvector.rs  memory_svecf32.rs  memory_vecf16.rs  memory_vecf32.rs  vecf16.rs  vecf32.rs
src/embedding/: udf.rs
src/gucs/: internal.rs  mod.rs  planning.rs  searching.rs
src/hnsw/: mod.rs
src/index/: am.rs  am_options.rs  am_scan.rs  views.rs
src/ipc/client/: mod.rs
src/ipc/server/: mod.rs
src/memory/: block.rs  bump.rs  mod.rs  parray.rs  pbox.rs
src/memory/collections/: mod.rs  parray.rs  pbox.rs  pslab.rs  pstatic.rs
src/postgres/: bgworker.rs  casts.rs  datatype.rs  functions.rs  gucs.rs  hook_executor.rs  hook_transaction.rs  hooks.rs  index.rs  index_build.rs  index_hnsw.rs  index_scan.rs  index_setup.rs  index_update.rs  mod.rs  operators.rs
src/utils/: file_socket.rs  hnsw.rs  ivf.rs  kmeans.rs  mod.rs  tcalar.rs  unsafe_once.rs  vec2.rs  visited.rs
tests/sqllogictest/: vbase.slt
