[package]
name = "vectors"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = ["pg15"]
pg11 = ["pgrx/pg11", "pgrx-tests/pg11"]
pg12 = ["pgrx/pg12", "pgrx-tests/pg12"]
pg13 = ["pgrx/pg13", "pgrx-tests/pg13"]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14"]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15"]
pg_test = []

[dependencies]
pgrx = { version = "=0.9.1" }
openai_api_rust = "0.1.8"
static_assertions = "1.1.0"
libc = "0.2.144"
serde = "1.0.163"
bincode = "1.3.3"
rand = "0.8.5"
cxx = "1.0"
byteorder = "1.4.3"
crc32fast = "1.3.2"
log = "0.4.18"
env_logger = "0.10.0"

[build-dependencies]
cxx-build = "1.0"

[dev-dependencies]
pgrx-tests = { version = "=0.9.1" }
httpmock = "0.6"
serde_json = "1"
mockall = "0.11.4"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
