[package]
name = "base"
version.workspace = true
edition.workspace = true

[dependencies]
half.workspace = true
libc.workspace = true
log.workspace = true
rand.workspace = true
rayon = { package = "rayon", version = "1.8.1" }
serde.workspace = true
thiserror.workspace = true
toml.workspace = true
validator.workspace = true

base_macros = { path = "../base_macros" }
detect = { path = "../detect" }

[lints]
workspace = true
