[package]
name = "ivf"
version.workspace = true
edition.workspace = true

[dependencies]
rand.workspace = true
serde_json.workspace = true

base = { path = "../base" }
common = { path = "../common" }
k_means = { path = "../k_means" }
quantization = { path = "../quantization" }
storage = { path = "../storage" }

[lints]
workspace = true
