[package]
name = "quantization"
version.workspace = true
edition.workspace = true

[dependencies]
base = { path = "../base" }
elkan_k_means = { path = "../elkan_k_means" }
utils = { path = "../utils" }
bytemuck.workspace = true
num-traits = "0.2.18"
rand.workspace = true
rayon.workspace = true
multiversion = "0.7.3"
serde_json.workspace = true

[lints]
workspace = true
